@@ -17,6 +17,8 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/swamp.c: swamp will now kill players with woodsman, but slower than
+ players without that skill. Feature request #1539125 by Andreas Kirschbaum.
 socket/lowlevel.c: apply patch #1550716 (Frequent crashes after client disconnects)
  courtesy Mark Kidder
 Ryo 2006-09-02
